# labwc-conf

./: CMakeLists.txt  README.md  x11.diff
src/: CMakeLists.txt  appearance.cpp  desktops.cpp  dock.cpp  fontbutton.cpp  labwc-conf.cpp  labwc-conf.desktop.in  labwc-conf.h  maindialog.cpp  maindialog.h  margins.cpp  mouse.cpp  moveresize.cpp  obconf-qt.cpp  obconf-qt.desktop.in  obconf.ui  theme.cpp  tree.cpp  windows.cpp
src/translations/: CMakeLists.txt  labwc-conf.desktop.yaml  labwc-conf_it.desktop.yaml  labwc-conf_it.ts  labwc.conf.ts  labwc_conf_de.desktop.yaml  obconf-qt_ar.ts  obconf-qt_arn.ts  obconf-qt_ast.ts  obconf-qt_bg.ts  obconf-qt_ca.ts  obconf-qt_cs.ts  obconf-qt_cy.ts  obconf-qt_da.ts  obconf-qt_de.ts  obconf-qt_el.ts  obconf-qt_es.ts  obconf-qt_et.ts  obconf-qt_fi.ts  obconf-qt_fr.ts  obconf-qt_gl.ts  obconf-qt_he.ts  obconf-qt_hr.ts  obconf-qt_hu.ts  obconf-qt_id.ts  obconf-qt_is.ts  obconf-qt_ja.ts  obconf-qt_kk.ts  obconf-qt_ko.ts  obconf-qt_lt.ts  obconf-qt_nb_NO.ts  obconf-qt_nl.ts  obconf-qt_oc.ts  obconf-qt_pa.ts  obconf-qt_pl.ts  obconf-qt_pt.ts  obconf-qt_pt_BR.ts  obconf-qt_ru.ts  obconf-qt_si.ts  obconf-qt_sk_SK.ts  (+5 more)
